more clean up 2003.12683

--- a/2003.12683/dirac_path_v1.tex
+++ b/2003.12683/dirac_path_v1.tex
@@ -131,17 +131,17 @@ classical system related to its classical Lagrangean by $ S_{cl} = \int_T^{t}L d
 infinitesimally close,
 \be
 \label{eq:qanalogue}
-\langle q^\prime_{t+\delta t}|q^\prime_t\rangle \sim  e^{\,i \frac {L \delta t}{\hbar}}
+\langle q^\prime_{t+\delta t}|q^\prime_t\rangle \sim  e^{i \frac {L \delta t}{\hbar}}
 \ee
-where we have denoted what Dirac calls the {\it quantum analogue} by $\,\sim\,$. The importance Dirac attached to this result can be gauged
+where we have denoted what Dirac calls the {\it quantum analogue} by $\sim$. The importance Dirac attached to this result can be gauged
 by his own words \cite{diracbook2}: {\it This result gives probably the most fundamental quantum analogue for the classical Lagrangian 
 function.}
 
 Feynman was perplexed by the word {\it analogue} and he is supposed to have asked Jehle the two famous questions:
-{\bf What does he mean, they are analogous?}, and, {\bf What is the use of that?}. As already mentioned,
+{\bf What does he mean, they are analogous?}, and, {\bf What is the use of that}? As already mentioned,
 Feynman was looking for a more precise connection so he could carry out the quantisation of the systems he had in mind for which
 there was no Hamiltonian desription, but only a classical action. We have explicitly discussed such a Lagrangian, given in 
-eqn.(\ref{eq:absorberL}). He is supposed to have quipped to Jehle: ``Dirac must have meant they are
+equation (\ref{eq:absorberL}). He is supposed to have quipped to Jehle: ``Dirac must have meant they are
 equal.'' To this, Jehle is supposed to have retorted ``No, he doesn't mean they are equal''.  
 
 In what was clearly a major step, Feynman is supposed to have said ``Let us see what happens if we make them equal'' and proceeds to try 
@@ -160,36 +160,42 @@ when $\epsilon$ was small.
 
 
 Two important points are worth stressing at this point. Feynman could have easily anticipated the normalisation factor, without any
-detailed calculations. The l.h.s of eqn.(\ref{eq:qanalogue}) actually \emph{diverges} as $\epsilon \rightarrow 0$ because of continuum 
-normalisation (l.h.s approaches a Dirac delta function). The second is about Feynman's obtaining the Schr\"odinger equation; what he obtained
-was the Schr\"odinger equation with the very specific quantum Hamiltonian
+detailed calculations. The left hand side of equation (\ref{eq:qanalogue}) actually \emph{diverges} as $\epsilon \rightarrow 0$ because of continuum 
+normalisation (the left hand side approaches a Dirac delta function). The second is about Feynman's obtaining the Schr\"odinger equation;
+what he obtained was the Schr\"odinger equation with the very specific quantum Hamiltonian
 \be
 \label{eq:feynHq}
 {\hat H}_{\it feyn} = \frac{{\hat p}^2}{2m} + V({\hat x})
 \ee
 The significance of stressing this will become clear later.
 
-At this point, we will club the three questions raised by Feynman into what we call \emph{Feynman's two questions}:\\
-{\bf FQ1: What does he mean they are analogous? Did he mean they are equal? Did he mean they are proportional?}\\
-{\bf FQ2: What is the use of that?}\\
+At this point, we will club the three questions raised by Feynman into what we call \emph{Feynman's two questions}:
 
+\medskip
+\noindent{\bf FQ1}: What does he mean they are analogous? Did he mean they are equal? Did he mean they are proportional?
+
+\medskip
+\noindent
+{\bf FQ2}: What is the use of that?
+
+\noindent
 It is worthwhile to quote verbatim Feynman's own narrative: ``So, I thought I was finding out what Dirac meant, but, as a matter of fact, 
 had made the discovery that what Dirac thought was analogous, was, in fact, equal. I had then, at least, the connection between the 
-Lagrangian and quantum mechanics, but still with wave functions and infinitesimal times.'' \cite{nobel}
+Lagrangian and quantum mechanics, but still with wave functions and infinitesimal times.'' \cite{nobel}.
 
 This crucial step, namely an equality in place of just an analogy, albeit for infinitesimal $\epsilon$, is what I would call the 
-{\bf path-integral missing link} and I shall comment about it in depth later on. It is a missing 
+{\it path-integral missing link} and I shall comment about it in depth later on. It is a missing 
 link because once the short-time propagator is known, it can be iterated many times to get the path-integral representation (as both Dirac
 and Feynman did). Next, Feynman iterates the infinitesimal result a large number of times to arrive at his famous path-integral formula. 
 Again, to quote Feynman, ``At last, I had succeeded in representing quantum mechanics directly in terms of the action $S_{cl}$''. The
 explicit path-integral representation obtained by Feynman is given below:
 \be
 \label{eq:feynpathint0}
-K(x_t^\prime;x_T^\prime) = {\cal A}\,\int\int \cdots  \int \prod_{i=1}\,dx_i^\prime\,e^{i\frac{S}{\hbar}}
+K(x_t^\prime;x_T^\prime) = {\cal A}\,\int\int \cdots  \int \prod_{i=1}dx_i^\prime\,e^{i\frac{S}{\hbar}}
 \ee
 here $K$ is called the {\it Kernel} and has the same meaning as Dirac's $\langle q_t^\prime|Q_T^\prime\rangle$. The sequence 
 $(x_t^\prime, x_1^\prime,x_2^\prime \ldots x_T^\prime$ is interpreted as a {\it path} with {\it fixed} endpoints $(x_t^\prime,x_T^\prime)$ 
-and consequently eqn(\ref{eq:feynpathint0}) is construed as an
+and consequently equation (\ref{eq:feynpathint0}) is construed as an
 integral over 'all paths' connecting the fixed end-points. It is tacitly understood that one finaly passes to the limit when 
 $\delta t = \frac{T - t}{N} \rightarrow 0$. Here N is the total number of subdivisions. Therefore, $\delta t \rightarrow 0$ limit 
 has to be realised by $N \rightarrow \infty$, keeping $T - t$ \emph{fixed}. ${\cal A}$ is a suitable normalisation, which is really infinite in the continuum limit but 
@@ -210,7 +216,7 @@ mechanics. These remarks bear so directly on what is to follow and
 are so necessary for an understanding of it, that it is thought best to
 quote them in full, even though it results in a rather long quotation.'')
 excerpts from the second edition of Dirac's famous book {\it The Principles of Quantum Mechanics} \cite{diracbook2}, but not from Dirac's paper.
-There too Feynman  does not quote the parts where Dirac gives a precise mathematical basis for why he used the word \emph{analogues} . 
+There too Feynman  does not quote the parts where Dirac gives a precise mathematical basis for why he used the word \emph{analogues}. 
 It is likely that the Feynman's first question resulted from  his not paying sufficient attention to these finer points. The flamboyant
 folklore as well Feynman's own strong emphasis on the lagrangian and least action aspects have created an impression that Dirac's role in the 
 development of the path-integrals was restricted only to these.
@@ -242,14 +248,14 @@ Let me briefly describe Dirac's paper \cite{diracpaper} and the four editions of
 \cite{diracbook1,diracbook2,diracbook3,diracbook4,diracbook4r} to place these introductory remarks in perspective as also
 to set the stage for the rest of this article. In the paper, Dirac provides a mathematically precise meaning to the analogy. This is 
 based on a detailed comparison between classical and quantum {\it contact} transformations. This should have clearly answered Feynman's first 
-question{\bf FQ1} in the negative, namely, that in the generic case the analogues are neither equal nor proportional to each other. 
+question {\bf FQ1} in the negative, namely, that in the generic case the analogues are neither equal nor proportional to each other. 
 Most importantly,
 Dirac shows that the analogy holds for arbitrary values of $(T,t,\hbar)$. Dirac then introduces a sub-division of the interval [T,t] into a
 large number of small intervals and examines the self-consistency of the analogy. In doing so, he arrives at a path-integral formula. He
 shows that for $\hbar \rightarrow 0$ self-consistency results in the action principle for classical mechanics. He then attempts to generalize
 the discussion to arbitrary $\hbar$. He appears to get 
 stuck in circularity. Nevertheless, a careful scrutiny of all his equations suggest a very neat resolution. That is to his definition, 
-presented in eqn.(\ref{eq:Stilde}) below, to define a \emph{new} class of path-integrals, which we are calling {\it Dirac Path-integrals}.
+presented in equation (\ref{eq:Stilde}) below, to define a \emph{new} class of path-integrals, which we are calling {\it Dirac Path-integrals}.
 
 In the second edition of the book \cite{diracbook2}, one finds several differences from the paper. Dirac drops the proof he gave in 
 the paper for the analogy.
@@ -284,8 +290,8 @@ It is very important to emphasize that this equality, for short time separations
 \langle q^\prime_{t+\epsilon}|q^{\prime}_t\rangle 
 =\,e^{\frac{i {\tilde S}}{\hbar}}
 \ee
-This is also a \emph{missing link}, very different from that of Feynman as expressed in eqn.(\ref{eq:missinglink0}). Therefore, one ought
-to be able to construct completely different classs of path-integrals starting from eqn.(\ref{eq:diracmissing}). That is the main thrust
+This is also a \emph{missing link}, very different from that of Feynman as expressed in equation (\ref{eq:missinglink0}). Therefore, one ought
+to be able to construct completely different classs of path-integrals starting from equation (\ref{eq:diracmissing}). That is the main thrust
 of this work.
 The fourth edition of the
 book 1958 \cite{diracbook4}, as well as the revised fourth edition \cite{diracbook4r} were identical to the third edition, as for as the
@@ -314,9 +320,9 @@ quantum description. Specifically, they lead to different observable consequence
 will be generically different. Therefore, $\langle q_{t+\epsilon}^\prime|q_t^\prime\rangle$ will also be different. These are consequences
 of the rules for quantum theory, and are logically independent of any considerations based on path-integrals. 
 
-Even before considering the implications of these ambiguities for path-integrals, it is important to look at their impact on the \emph{missing link} of eqn.(\ref{eq:missinglink0}). For reasons just explained, the l.h.s of this eqn  takes different values. But all these different
+Even before considering the implications of these ambiguities for path-integrals, it is important to look at their impact on the \emph{missing link} of equation (\ref{eq:missinglink0}). For reasons just explained, the l.h.s of this eqn  takes different values. But all these different
 quantum Hamiltonians have the \emph{same} classical limit, and hence the same $S_{cl}$. Consequently, they will have the same value for
-the r.h.s of eqn.(\ref{eq:missinglink0})! 
+the right hand side of equation (\ref{eq:missinglink0})! 
 
 So there is a clear inconsistency, in general, between Feynman's  missing link relationsand non-uniqueness of quantisations of classical 
 systems. 
@@ -330,7 +336,7 @@ The Feynman missing link relation can be correct for at best one class of quanti
 %\label{eq:missinglink}
 %\langle q_{t + \epsilon}|q_t\rangle = \frac{1}{A(\epsilon)}\,e^{i \frac{L \epsilon}{\hbar}}
 %\ee
-The resolution of this inconsistency has to lie in that eqn.(\ref{eq:missinglink0}) can not be true in general but only holds for certain 
+The resolution of this inconsistency has to lie in that equation (\ref{eq:missinglink0}) can not be true in general but only holds for certain 
 classes of quantisations.  There is an interesting anecdote narrated on p.226 of \cite{gleick}. ``Now he asked Dirac whether the great man 
 had known all along that the
 two quantities were proportional. `Are they?' Dirac said. Feynman said yes, they are. After a silence he (Dirac) walked away''. Contrary to
@@ -341,7 +347,7 @@ In my opinion, Dirac's response probably meant that Dirac was not sympathetic to
 twenty years after this alleged anecdote, maintained his analogue description \cite{diracbook4r} is added support to this opinion!
 
 Let us
-examine carefully how Feynman arrived at eqn.(\ref{eq:missinglink0}).
+examine carefully how Feynman arrived at equation (\ref{eq:missinglink0}).
 He explicitly showed that for Lagrangians of the type
 \be
 \label{eq:quadL}
@@ -367,16 +373,16 @@ still there, so the situation is not entirely clear. Differently stated, the Fey
 %his proposal was to apply the missing link for them by directly substituting their actions. But this again is an {\it ad hoc} choice of 
 %quantisation. In all such choices the onus of proving their self-consistency remains.
 
-Whatever was said about the missing link can be immediately to generalized to the Feynman path-integral of eqn.(\ref{eq:feynpathint0}).
+Whatever was said about the missing link can be immediately to generalized to the Feynman path-integral of equation (\ref{eq:feynpathint0}).
 Now, the l.h.s, the Kernel $\langle q_T^\prime|q_t^\prime\rangle$ will generically take on different values for different quantum Hamiltonians,
-albeit with the same classical limit, while the r.h.s is determined entirely by that unique classical limit. The inconsistency manifests
+albeit with the same classical limit, while the right hand side is determined entirely by that unique classical limit. The inconsistency manifests
 again.
 
 This immediately raises a serious issue: if there is no unique path-integral representation, how can one understand the least action principle
 of classical mechanics? In the Feynman path-integral, the classical action appears explicitly, and applying Dirac's stationary phase ideas
 immediately gives rise to the least action principle.
 
-A related issue is, what are the implications of using the eqn.(\ref{eq:diracmissing}) instead of eqn.(\ref{eq:missinglink0}) to
+A related issue is, what are the implications of using the equation (\ref{eq:diracmissing}) instead of equation (\ref{eq:missinglink0}) to
 construct the path-integrals? Since ${\tilde S}$ need not be uniquely determined by $S_{cl}$, there is at least some hope to remove
 the inconsistency forced on by the latter eqn. In other words, different choices of ${\tilde S}$ may take care of the quantisation ambiguities.
 
@@ -388,7 +394,7 @@ yields the least action principle of classical mechanics.
 
 \section{Dirac and the path-integral}
 Here we carefully examine \cite{diracpaper, diracbook2, diracbook4r} to give support to the claims made earlier about Dirac's contributions
-to the path-integrals. We will also answer Feynman's questions {\bf\,FQ1, FQ2}. We will chiefly look at i) proofs of the analogies, ii) 
+to the path-integrals. We will also answer Feynman's questions {\bf FQ1}, {\bf FQ2}. We will chiefly look at i) proofs of the analogies, ii) 
 path-integrals and quantisation ambiguities, and, iii) least action principle in classical mechanics, and, iv) the new path integrals and the
 Schr\"odinger eqn. 
 \subsection{Classical canonical transformations}
@@ -419,7 +425,7 @@ where $H^\prime(Q,P)$ is the new Hamiltonian. As is well known, such canonical t
 \frac{\partial S}{\partial q} = p\quad\quad\quad \frac{\partial S}{\partial Q} = - P\quad\quad \frac{\partial S}{\partial t} = H^\prime - H
 \ee
 This is as far as canonical transformation at some time t are concerned. It is also known in classical mechanics that under time evolutions
-the change in the dynamical variables (q,p) is also described by canonical transformations! If $q_t,p_t$ are the dynamical
+the change in the dynamical variables $(q,p)$ is also described by canonical transformations! If $q_t,p_t$ are the dynamical
 variables at initial time t, and, $q_{t^\prime},p_{t^\prime}$ are dynamical variables at final time $t^\prime$, the corresponding
 canonical transformations obey
 \be
@@ -432,12 +438,12 @@ Integrating these equations, one can show that S is
 \label{eq:principal}
 S = \int_t^{t^\prime}\,L 
 \ee
-i.e S is the action(also Hamilton's first principal function).
+i.e $S$ is the action (also Hamilton's first principal function).
 
 \subsection{Quantum analogues}
 Dirac then proceeds to prove the analogy for quantum mechanics. The proof given in the paper \cite{diracpaper} is as follows: he considers
 the transformation function and defines(I have changed the notation to avoid confusion; this is the same as the earlier introduced 
-eqn.(\ref{eq:Stilde}))
+equation (\ref{eq:Stilde}))
 \be
 \label{eq:qanalog}
 \langle q_{t^\prime}|q_T^{\prime}\rangle 
@@ -448,7 +454,7 @@ as already emphasized, has no a priori relation to the classical action, and in 
 that ${\tilde S}$ is an
 \emph{ordinary function} and not an \emph{operator}.
 
-To handle the non-commutativity inherent in quantum mechanics, Dirac introduces a very novel technique \cite{diracpaper}:for every operator
+To handle the non-commutativity inherent in quantum mechanics, Dirac introduces a very novel technique \cite{diracpaper}: for every operator
 $\alpha$ he introduces a {\it mixed representation} $\langle q^\prime|\alpha|Q^\prime\rangle$. To reduce confusion the variables 
 ${\hat q}_t, {\hat q}_T$
 have been renamed ${\hat q},{\hat Q}$. The mixed representation can easily be related to the standard representation where matrix elements 
@@ -468,7 +474,7 @@ quite unwieldy to do so. Given a pair of \emph{non-commuting} operators ${\hat q
 to be \emph{unique}. Else, the mixed-representation of that operator would not be unique, which in turn would imply the standard representation
 in any basis would not be unique.
 
-Then, on using eqn.(\ref{eq:mixedrep}) it is easy to see that
+Then, on using equation (\ref{eq:mixedrep}) it is easy to see that
 \be
 \label{eq:mixedrep2}
 \langle q^\prime\,|\alpha(q,Q)\,|\,Q^\prime \rangle  = \alpha(q^\prime\,Q^\prime\,)\,\langle q^\prime\,|\,Q^\prime \rangle 
@@ -489,10 +495,10 @@ Dirac shows that
 p(q^\prime,Q^\prime) = \frac{\partial {\tilde S}(q^\prime,Q^\prime)}{\partial q^\prime}\quad\quad\quad
 P(q^\prime,Q^\prime) = - \frac{\partial {\tilde S}(q^\prime,Q^\prime)}{\partial Q^\prime}
 \ee
-These are exactly of the same form as eqns.(\ref{eq:canonicalevol}), except for the time-derivative parts, which we come to next.
+These are exactly of the same form as the equations (\ref{eq:canonicalevol}), except for the time-derivative parts, which we come to next.
 
-The paper \cite{diracpaper} appeared in 1932. By that time the first edition of Dirac's book (1930) \cite{diracbook1} had already
-appeared and this material nor any discussion of the least action principle was in it. In 1935 Dirac came out with the second edition
+The paper \cite{diracpaper} appeared in 1932. By that time the first edition of Dirac's book \cite{diracbook1} had already
+appeared in 1930 and this material nor any discussion of the least action principle was in it. In 1935 Dirac came out with the second edition
 of the book \cite{diracbook2} with substantial revisions. Now we take up his proof of the quantum analogue in the second edition.
 
 Dirac completely omits the discussion of the approach based on well-ordered operators. Instead, he provides the following differential equations
@@ -516,23 +522,22 @@ On applying the well-ordered operator method, one can obtain the temporal differ
 \frac{\partial {\tilde S}(q^\prime,Q^\prime)}{\partial T} = \,H(q^\prime,Q^\prime)
 \label{eq:qanalog2edtemp}
 \ee
-It is critical to have these in order to integrate them to get the analog of eqn.(\ref{eq:principal}). But the equations in second edition
-do not seem to transparently lead to eqn.(\ref{eq:qanalog2})! It is to be appreciated that the eqns.(\ref{eq:qanalog2}, \ref{eq:qanalog2edtemp})
-involve only commuting objects with no explicit trace of the non-commutativity of quantum mechanics. 
+It is critical to have these in order to integrate them to get the analog of equation (\ref{eq:principal}). But the equations in second edition
+do not seem to transparently lead to equation (\ref{eq:qanalog2})! It is to be appreciated that the equations (\ref{eq:qanalog2}) and (\ref{eq:qanalog2edtemp}) involve only commuting objects with no explicit trace of the non-commutativity of quantum mechanics. 
 
 That brings us to the third edition \cite{diracbook3}.
 In the third edition, Dirac reinstates the proof given in the paper along with the equations of the second edition. Thus the proof of the 
-analogy is mathematically precise. {\bf It holds for all values of $\hbar,t,T$}. There is no question of the analogues being either
+analogy is mathematically precise. {\it It holds for all values of $\hbar,t,T$}. There is no question of the analogues being either
 equal or even proportional, even for short temporal separations. A good example in this context are \emph{Poisson Brackets} in classical
 mechanics and \emph{commutators} in quantum mechanics. They are analogues of each other in the sense of obeying the same algebra, but
 they arev neither equal, nor proportional to each other.
 
-That should answer Feynman's first question, FQ1, emphatically in the negative.
+That should answer Feynman's first question, {\bf FQ1}, emphatically in the negative.
 \subsection{Dirac Path-integrals}
 Dirac sets out to investigate the consistency of the analogy
 \be
 \label{eq:consistency}
-B(t_1,t_2) = e^{i \frac{S_{cl}}{\hbar}} = e^{\frac{i}{\hbar}\,\int_{t_1}^{t_2}\,L}\,\sim\,\langle q^\prime\,|\,Q^\prime\rangle
+B(t_1,t_2) = e^{i \frac{S_{cl}}{\hbar}} = e^{\frac{i}{\hbar} \int_{t_1}^{t_2} L} \sim \langle q^\prime | Q^\prime\rangle
 \ee
 where we have used the symbol $\sim$ to denote analogy. Before proceding, it is very important to note that, for infinitesimal temporal i
 separations $B(t,t+\epsilon)$ only depends on the q-values at the two ends. Dirac investigates the consistency by dividing the interval
@@ -540,7 +545,7 @@ $[t_i , t_f]$ into a very large number of intervals with the intervening times l
 has been made whereby $t_i = t;t_f = T$! On the classical side one has
 \be
 \label{eq:consistency1}
-B(t_i , t_f) = B(t_i,t_1)\,B(t_1,t_2) \ldots B(t_m, t_{m+1} \ldots B(t_N,t_f) = e^{\frac{i}{\hbar}\int_{t_i}^{t_f}\,L}
+B(t_i , t_f) = B(t_i,t_1)\,B(t_1,t_2) \ldots B(t_m, t_{m+1} \ldots B(t_N, t_f) = e^{\frac{i}{\hbar}\int_{t_i}^{t_f} L}
 \ee
 It is very important to bear in mind that $B(t_i,t_f)$ depends, in addition to the positions at the initial and final times, on all the 
 intermediate positions $q_m$ at $t_m$ and that these positions lie on the classical trajectory connecting the initial and final positions.
@@ -556,14 +561,15 @@ All that has been used is the completeness for all the intermediate states. On u
 \langle q_{t_f}^\prime\,|\,q_{t_i}^\prime \rangle  =  \int \ldots \int \prod_{i=1}^{N}\,dq_i^\prime\,e^{\frac{i}{\hbar}\,{\tilde S}(\{q_i^\prime\})}
 \ee 
 where we have used the shorthand notation $\{q_i^\prime\,\}$ to denote the initial, final as well as all the intermediate positions. This
-has been delivered entirely by the analogy and is valid for {\it arbitrary} $\hbar$. This is what we like to call the {\bf Dirac Path-integral}.It is for certain a path-integral.
+has been delivered entirely by the analogy and is valid for {\it arbitrary} $\hbar$. This is what we like to call the {\it Dirac Path-integral}. 
+It is for certain a path-integral.
 
 At first sight it might appear that a major weakness of this path-integral is that nothing much seems to be known about ${\tilde S}$ making
- eqn.(\ref{eq:diracpathint}) not particularly useful. We shall now show that that is actually its major strength for it allows this
+ equation (\ref{eq:diracpathint}) not particularly useful. We shall now show that that is actually its major strength for it allows this
 {\it generalized} path-integral to be fully compatible with quantisation ambiguities which the Feynman path integral could never be.
 
 Though the analogy is unable to fix ${\tilde S}$ there is much that can nevertheless be said about it, as Dirac has already done. In 
-particular, as we approach $\hbar \rightarrow 0$ ${\tilde S}$ must increasingly {\it equal} the classical action.  That is,
+particular, as we approach $\hbar \rightarrow 0$, ${\tilde S}$ must increasingly {\it equal} the classical action.  That is,
 \be
 \label{eq:tildeS}
 \hbar \rightarrow 0 \rightarrow {\tilde S} \rightarrow S_{cl}
@@ -591,19 +597,19 @@ analogue.
 The other is that away from $\hbar \rightarrow 0$, the $S^*$ terms are indeed important, and there is no more any conflict between the
 path-integral and the quantisation ambiguities; both the LHS and RHS are sensitive to these ambiguities and in fact $S^*$ can be taken as a
 way of classifying the ambiguities. This is in stark contrast with the Feynman path-integral for which $S^* = S^*_{\it feyn}$. On using
-eqn.(\ref{eq:missinglink0}), it is easy to see that
+equation (\ref{eq:missinglink0}), it is easy to see that
 \be
 \label{eq:S*feyn} 
 S^*_{\it feyn} = i \hbar \ln{A}=\frac{i\hbar}{2}\{ \ln{\frac{2 \pi i \hbar}{m}} + \ln{\epsilon}\}
 \ee
-This does satisfy $S^*_{\it feyn} \rightarrow 0$ as $\hbar \rightarrow 0$ as required by eqn.(\ref{eq:starS2}).
+This does satisfy $S^*_{\it feyn} \rightarrow 0$ as $\hbar \rightarrow 0$ as required by equation (\ref{eq:starS2}).
 
 $S^*$ need not be equal to $S^*_{\it feyn}$ in general, but that choice can be taken as a particular choice of quantisation for which the 
 Feynman path-integral is the
 correct representation. In the absence of a deeper guiding principle for quantum Hamiltonians, any such choice is ad hoc in itself.
 Only empirical vindications can be used to validate the quantum Hamiltonians.
 \section{Dirac Path Integal and Schr\"odinger Equation}
-Feynman justified his eqn.(\ref{eq:missinglink0}) by the fact that it led to the Schr\"odinger eqn. with what appeared to be the correct
+Feynman justified his equation (\ref{eq:missinglink0}) by the fact that it led to the Schr\"odinger eqn. with what appeared to be the correct
 quantum Hamiltonian, though, as mentioned earlier, there are no first principles criteria for determining quantum Hamiltonians. In this section
 we show how Dirac path-integrals too generically lead to Schr\"odinger eqn. We illustrate the connection between Dirac path integrals and 
 Schr\"odinger eqn with the help of an explicit example. We consider the 
@@ -646,7 +652,7 @@ i \hbar\,\frac{\partial \psi(x,t)}{\partial t} = - \frac{\hbar^2}{4}\,
 \{\frac{1}{f_0}\,\frac{{\partial}^2\,\psi(x,t)}{{\partial}^2\,x} +  \frac{{\partial}^2\,\psi(x,t)}{{\partial}^2\,x}\,\frac{1}{f_0}\}
  + V(x)\psi(x,t)
 \ee
-In other words, the choice of $S^*$ as per eqn.(\ref{eq:Sstar}) leads to the quantum Hamiltonian
+In other words, the choice of $S^*$ as per equation (\ref{eq:Sstar}) leads to the quantum Hamiltonian
 \be
 \label{eq:HqSstar}
 {\hat H}_{\lambda} = \frac{1}{4}\,\{\,{\hat p}^2\,\frac{1}{f_0({\hat x})} + \frac{1}{f_0({\hat x})}\,\} + V({\hat x})
@@ -659,7 +665,7 @@ The following are to be noted:
 {\hat H} = \frac{{\hat p}^2}{2m} + V({\hat x})
 \ee
 \item In general, the Dirac path-integrals, classified by the choice of $S^*$, still yield the Schr\"odinger eqn, but with quantum 
-Hamiltonians given by eqn.(\ref{eq:HqSstar}), generically different from the Feynman case.
+Hamiltonians given by equation (\ref{eq:HqSstar}), generically different from the Feynman case.
 \item In the classical limit, understood as the limit $\hbar \rightarrow 0$, all the quantum Hamiltonians take the same limiting
 \be
 \label{eq:Hcl}
@@ -676,8 +682,8 @@ S^*_{\it feyn} = \ln{A}\quad\quad A = \sqrt{\frac{2 \pi i \hbar \epsilon}{m}}
 In this section we address some important conceptual highlights of the path-integral formulations. The massive impact of this formulation 
 on a variety of
 areas, including financial markets \cite{kleinert} will not be our focus; instead, we shall focus on the conceptual aspects. 
-This section should also enable readers to make a comparison between the Feynman path-integrals of eqn.(\ref{eq:feynpathint0}) and the newly
-introduced Dirac path-integrals of eqn.(\ref{eq:diracpathint*}). 
+This section should also enable readers to make a comparison between the Feynman path-integrals of equation (\ref{eq:feynpathint0}) and the newly
+introduced Dirac path-integrals of equation (\ref{eq:diracpathint*}). 
 We shall restrict ourselves to particles in one spatial dimension. 
 \subsection{QM entirely in terms of {\it commuting} variables}
 The LHS of either of these equations is a purely quantum mechanical object, calculable entirely within the quantum mechanical formalism,
@@ -700,14 +706,14 @@ deeper understanding of the path-integrals. The apparent mystery gets resolved o
 appear explicitly and all the subtelety resides in a careful construction of it.
 
 We have not demonstrated this in our paper. But we give a fairly good argument for why it should follow from Dirac path-integrals
-as well. The key observation is that eqn.(\ref{eq:commutation}) does not depend on the specific form of $S_{cl}$. For the purposes
+as well. The key observation is that equation (\ref{eq:commutation}) does not depend on the specific form of $S_{cl}$. For the purposes
 of this demonstration,one can treat the entire $S_{cl} + S^*$ of Dirac path-integrals as an effective $S_{cl}$. Then Feynman's
-demonstration of eqn.(\ref{eq:commutation}) can be extended to the Dirac case as well. Of course, this effective can not be a true
+demonstration of equation (\ref{eq:commutation}) can be extended to the Dirac case as well. Of course, this effective can not be a true
 classical action as it will explicitly involve $\hbar$.
  
 This is an apt place to make some remarks about various alternative approaches to path-integrals and how non-commutativity issues are
 handled by them. After Feynman's construction, several approaches to deriving the path integral have appeared in the literature. One
-of these is to consider the quantum Hamiltonians of the type given in eqn.(\ref{eq:quadH}). The terms $T({\hat p}),V({\hat x})$
+of these is to consider the quantum Hamiltonians of the type given in equation (\ref{eq:quadH}). The terms $T({\hat p}),V({\hat x})$
 do not commute with each other. Working in the Schr\"odinger picture, the \emph{time evolution} operator $e^{i\frac{{\hat H}{\bar T}}{\hbar}}$
 (without loss of generality we set $t = 0$ and denote final time as ${\bar T}$ to avoid confusion with the kinetic energy T) is rewritten as
 \be
@@ -718,7 +724,7 @@ e^{i \frac{{\hat V}\epsilon}{\hbar}})^n
 on using the famous {\bf Trotter's Formula}. One then cleverly uses completeness of both position bases and momentum bases to arrive
 at the path-integral. But in Dirac's, and consequently Feynman's, Trotter's formula plays no role whatsoever, for reasons explained above. 
 Furthermore, if the Hamiltonians
-are not of the form of eqn.(\ref{eq:quadH}) it is not at all clear if Trotter's formula would be of any use.
+are not of the form of equation (\ref{eq:quadH}) it is not at all clear if Trotter's formula would be of any use.
 
 In the \emph{quantum histories} approach \cite{griffiths,histories}, the summands are chains of quantum operators unlike both the Dirac 
 and Feynman 
@@ -752,7 +758,7 @@ while the Hamiltonian version is
 The least action principle appears more as a pnemonic, without any deeper physical significance. The path-integral formulation is supposed
 to provide that significance by showing how it emerges 'naturally from the path-integral in the $\hbar \rightarrow 0$ limit. To get the
 crux of the argument(first given by Dirac in \cite{diracpaper}), consider fixing all intermediate $x^\prime$'s except one, say,
-$x_k^\prime$(in the Dirac path-integral of eqn.(\ref{eq:diracpathint*}) the notation used is $q_k^\prime$). 
+$x_k^\prime$(in the Dirac path-integral of equation (\ref{eq:diracpathint*}) the notation used is $q_k^\prime$). 
 Any variation,
 including infinitesimal ones,
 in $x_k^\prime$ will cause the phase $e^{\frac{iS_{cl}}{\hbar}}$ to fluctuate very rapidly in this limit(frequency approaching $\infty$), 
@@ -766,11 +772,11 @@ reasoning can be applied to all the intermediate $x^\prime$'s with the result th
 extremizes the classical action. Feynman was so struck by the beauty of Dirac's reasoning that he chose to review the salient aspects in
 his paper \cite{feynpaper}.
 
-Now let us see how the same arguments can be applied to the Dirac path-integral of eqn.(\ref{eq:diracpathint*}). In the limit 
+Now let us see how the same arguments can be applied to the Dirac path-integral of equation (\ref{eq:diracpathint*}). In the limit 
 $\hbar \rightarrow  0$, the $S^*$ is \emph{sub-dominant} compared to $S_{cl}$, so the stationary paths, even for the Dirac case, are i
 determined by $S_{cl}$ only!
 \subsection{Connections to Classical Statistical Mechanics}
-The RHS of the path-integrals either \ref{eq:feynpathint0}, or, eqn.(\ref{eq:diracpathint*}), formally look very much like 
+The RHS of the path-integrals either \ref{eq:feynpathint0}, or, equation (\ref{eq:diracpathint*}), formally look very much like 
 the {\it partition function} of a 1-d classical
 statistical system except for one crucial difference;the integrand of the path-integrals is a {\it complex phase} whereas the integrand of
 a thermal partition function is of the form $e^{- \frac{H}{kT}}$. This suggests working out the quantum problem in {\it Euclidean time}. It
@@ -820,9 +826,9 @@ limitations and to quote him ``....only proved in a very special case. It is app
 any Lagrangian which is a quadratic function of velocities..''. Even the said extension to a more general class can not be general enough to
 be valid always.
 
-This answers Feynman's first question FQ1 decidedly in the negative. His second question FQ2, was about the usefulness
+This answers Feynman's first question {\bf FQ1} decidedly in the negative. His second question {\bf FQ2}, was about the usefulness
 of the analogues Dirac found. It is quite clear how decisive the analogy is in arriving at Dirac's path-integral for general quantisations.
-That ought to be enough of an answer to FQ2. It can be dangerous to judge a scientific concept or even a notion
+That ought to be enough of an answer to {\bf FQ2}. It can be dangerous to judge a scientific concept or even a notion
 based on {\it usefulness}. A case in point is that even Feynman's path-integral found to be so highly useful in a wide variety of circumstances,
 took several decades since its inception to solve the Hydrogen atom problem! 
 %what the conventional approaches to quantum mechanics had
@@ -830,14 +836,14 @@ took several decades since its inception to solve the Hydrogen atom problem!
 %{\it Matrix Mechanics} too till Pauli solved it in his inimitable brilliant style!
 
 But the really major results of this paper are i) Dirac's contributions were not restricted to revealing the role of Lagrangian in
-quantum mechanics, he in fact discovered the path integral, ii) giving an explicit equation(eqn.(\ref{eq:diracpathint*}) for this 
+quantum mechanics, he in fact discovered the path integral, ii) giving an explicit equation(equation (\ref{eq:diracpathint*}) for this 
 path-integral, which we have named \emph{the Dirac path integral},iii) the Feynman path integrals are inconsistent with quantisation ambiguities
 inherent in quantum mechanics, iv) in contrast, the Dirac path integrals are fully consistent with such ambiguities, v) we have shown
 how the large class of Dirac path-integrals account for the principle of least action of classical mechanics.
 
-What gave Feynman confidence in his eqn.(\ref{eq:missinglink0}) was that it reproduced the Schr\"odinger equation with one particular quantum
+What gave Feynman confidence in his equation (\ref{eq:missinglink0}) was that it reproduced the Schr\"odinger equation with one particular quantum
 Hamiltonian. With an explicit example, we
-have shown that this is true of the corresponding eqn.(\ref{eq:diracmissing}) for the Dirac case too. But each choice of $S^*$ in the
+have shown that this is true of the corresponding equation (\ref{eq:diracmissing}) for the Dirac case too. But each choice of $S^*$ in the
 Dirac case yields a different \emph{quantum Hamiltonian}. We have also shown that all those quantum Hamiltonians have the \emph{same}
 classical limit. So one of the implications of our Dirac path-integral is as a systematic generator of quantum Hamiltonians with the
 same classical limit.
@@ -863,7 +869,7 @@ T.R. Govindarajan for refreshing my memory about the same.
 Scientific Publishers, 2009.
 \bibitem{seiler} Erhard Seiler, {\it Gauge Theories as a problem of Constructive Quantum Field Theory and Statistical Mechanics}, Lecture
 Notes in Physics, Number 159, Springer-Verlag 1982.
-\bibitem{gleick} James Gleick, {\it The Genius}
+\bibitem{gleick} James Gleick, {\it Genius: The Life and Science of Richard Feynman}
 \bibitem{feynpaper} R.P. Feynman, {\it Space-time approach to non-relativistic quantum mechanics}, Reviews of Modern Physics, Vol 20, p.267
 (1948)
 \bibitem{nobel} Feynman's Nobel acceptance lecture (1965).
