--- a/2101.06436/main.tex
+++ b/2101.06436/main.tex
@@ -138,7 +138,7 @@ If $\Delta>0$, this overlap of $p(\lambda\vert\varphi)$ and $\Lambda_\psi$ is ta
 
 Harrigan and Spekkens claim all models that don't meet their criterion for being $\psi$-epistemic are $\psi$-ontic, based on how, classically, states can be either ontic (points on state space) or epistemic (probability distributions on state space) as discussed above.\footnote{Schlosshauer and Fine apply the terms Mixed and Segregated to these quantum models, rather than $\psi$-epistemic and $\psi$-ontic \cite{Schlosshauer2012Implications}, which better characterises the divide in wavefunction overlap.}
 
-Harrigan and Spekkens give three subcategories of $\psi$-ontology. In the strongest (the $\psi$-complete model), the wavefunction describes the system's state completely and no hidden variables are left out by it (as in Everettian interpretations). In the other two models, both referred to as $\psi$-supplemented, the state is supplemented by some hidden variable - in the first as a one-to-one mapping between the wavefunction and the state; and in the second where wavefunctions can map to more than one state (but each state still only maps to one wavefunction). While the wavefunction may not itself be the state, in this framework, $\psi$-ontic models have each state correspond to at most one wavefunction (see Fig. \ref{fig:Graphs}B), meaning all wavefunctions have disjoint support in the state-space:
+Harrigan and Spekkens give three subcategories of $\psi$-ontology. In the strongest (the $\psi$-complete model), the wavefunction describes the system's state completely and no hidden variables are left out by it (as in Everettian interpretations). In the other two models, both referred to as $\psi$-supplemented, the state is supplemented by some hidden variable --- in the first as a one-to-one mapping between the wavefunction and the state; and in the second where wavefunctions can map to more than one state (but each state still only maps to one wavefunction). While the wavefunction may not itself be the state, in this framework, $\psi$-ontic models have each state correspond to at most one wavefunction (see Fig. \ref{fig:Graphs}B), meaning all wavefunctions have disjoint support in the state-space:
 \begin{equation}
     \forall\psi,\varphi,\;s.t.\psi\neq\varphi;\;\Lambda_{\psi}\cap\Lambda_{\varphi}=\oslash
 \end{equation}
